USBDDx-49 Ввести дополнительное свойство USBDevice
Убраны некоторые тесты, исправлены косяки.